--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -3493,6 +3493,7 @@ export-script=تصدير النص البرمجي
 export-templates=قوالب التصميم
 export-the-selected-data-to-the-given-lar-file-name=تصدير البيانات المختارة لاسم ملف LAR المعطى.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=تصدير البيانات المختارة إلى{0} لبوابة عن بعد أو إلى {0} آخر في نفس البوابة.
+export-translation=Export Translation (Automatic Copy)
 export-users=تصدير المستخدم
 expose-global=كشف شامل
 expression=التعبير
@@ -7844,6 +7845,7 @@ select-entry=تحديد إدخال
 select-existing-content-or-add-terms-of-use-in-the-space-below=حدد المحتوى الموجود أو أضف شروط الاستخدام في الفراغ أدناه.
 select-existing-content-or-add-the-url-below=حدد المحتوى الموجود أو أضف عنوان URL أدناه.
 select-experience=تحديد الخبرة
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=حدد خيارات من قائمة.
 select-field-type-label=تحديد من القائمة
 select-filter=تحديد عامل تصفية
