--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Шаблони за изглед
 export-the-selected-data-to-the-given-lar-file-name=Експортирайте избраните данни в дадения LAR файл.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Експорт на потребител
 expose-global=Покажи глобален (Automatic Translation)
 expression=изразяване (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Избор на запис (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Изберете съществуващо съдържание или добавете термини за използване в пространството по-долу. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Изберете съществуващо съдържание или добавете URL адреса по-долу. (Automatic Translation)
 select-experience=Изберете опит (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Изберете опции от списък. (Automatic Translation)
 select-field-type-label=Избор от списък (Automatic Translation)
 select-filter=Изберете филтър (Automatic Translation)
