--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Šablony rozvržení
 export-the-selected-data-to-the-given-lar-file-name=Exportovat vybraná data do LAR souboru zadaného jména.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Exportovat uživatele
 expose-global=Vystavit globální (Automatic Translation)
 expression=výraz (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Vybrat položku (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Vyberte existující obsah nebo přidejte podmínky použití v níže uvedeném prostoru. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Vyberte existující obsah nebo přidejte adresu URL níže. (Automatic Translation)
 select-experience=Vybrat prostředí (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Vyberte možnosti ze seznamu. (Automatic Translation)
 select-field-type-label=Vybrat ze seznamu (Automatic Translation)
 select-filter=Vybrat filtr (Automatic Translation)
