--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Layout skabeloner
 export-the-selected-data-to-the-given-lar-file-name=Eksporter de markerede data til det angivne LAR-filnavn. (Automatic Translation)
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Eksporter bruger
 expose-global=Udsæt global (Automatic Translation)
 expression=udtryk (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Vælg post (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Vælg eksisterende indhold, eller tilføj vilkår for anvendelse i feltet nedenfor. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Vælg eksisterende indhold, eller tilføj URL-adressen nedenfor. (Automatic Translation)
 select-experience=Vælg oplevelse (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Vælg indstillinger på en liste. (Automatic Translation)
 select-field-type-label=Vælg på listen (Automatic Translation)
 select-filter=Vælg filter (Automatic Translation)
