--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -3493,6 +3493,7 @@ export-script=Skript exportieren
 export-templates=Vorlagen exportieren
 export-the-selected-data-to-the-given-lar-file-name=Die ausgewählten Daten als die angegebene LAR-Datei exportieren.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Die ausgewählen Daten der {0} zu einem Remoteportal oder einer anderen {0} auf dem gleichen Portal exportieren.
+export-translation=Export Translation (Automatic Copy)
 export-users=Benutzer exportieren
 expose-global=Global zur Verfügung stellen
 expression=Ausdruck
@@ -7844,6 +7845,7 @@ select-entry=Eintrag auswählen
 select-existing-content-or-add-terms-of-use-in-the-space-below=Wählen Sie existierenden Inhalt aus oder geben Sie unten die Nutzungsbedingungen ein.
 select-existing-content-or-add-the-url-below=Wählen Sie existierenden Inhalt aus oder fügen Sie unten die URL hinzu.
 select-experience=Erlebnis wählen
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Wählen Sie eine oder mehrere Optionen aus einer Liste aus.
 select-field-type-label=Auswahl aus Liste
 select-filter=Filter auswählen
