--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Πρότυπα διάταξης σελίδων
 export-the-selected-data-to-the-given-lar-file-name=Εξαγωγή των επιλεγμένων δεδομένων στο αρχείο LAR.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Εξαγωγή χρηστών
 expose-global=Εκθέστε την παγκόσμια (Automatic Translation)
 expression=έκφραση (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Επιλογή καταχώρησης (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Επιλέξτε υπάρχον περιεχόμενο ή προσθέστε όρους χρήσης στον παρακάτω χώρο. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Επιλέξτε υπάρχον περιεχόμενο ή προσθέστε τη διεύθυνση URL παρακάτω. (Automatic Translation)
 select-experience=Επιλογή εμπειρίας (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Επιλέξτε επιλογές από μια λίστα. (Automatic Translation)
 select-field-type-label=Επιλογή από λίστα (Automatic Translation)
 select-filter=Επιλογή φίλτρου (Automatic Translation)
