--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Export Templates (Automatic Copy)
 export-the-selected-data-to-the-given-lar-file-name=Export the selected data to the given LAR file name. (Automatic Copy)
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Export Users (Automatic Copy)
 expose-global=Expose Global (Automatic Copy)
 expression=Expression (Automatic Copy)
@@ -7844,6 +7845,7 @@ select-entry=Select Entry (Automatic Copy)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Select existing content or add terms of use in the space below. (Automatic Copy)
 select-existing-content-or-add-the-url-below=Select existing content or add the URL below. (Automatic Copy)
 select-experience=Select Experience (Automatic Copy)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Select options from a list. (Automatic Copy)
 select-field-type-label=Select from List (Automatic Copy)
 select-filter=Select Filter (Automatic Copy)
