--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -3493,6 +3493,7 @@ export-script=Exportar script
 export-templates=Plantillas de exportación
 export-the-selected-data-to-the-given-lar-file-name=Exporte los datos seleccionados como un archivo LAR con el nombre proporcionado.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Exporta los datos seleccionados al {0} de un portal remoto o a otro {0} en el mismo portal.
+export-translation=Export Translation (Automatic Copy)
 export-users=Exportar usuarios
 expose-global=Exponer global
 expression=Expresión
@@ -7844,6 +7845,7 @@ select-entry=Seleccionar entrada
 select-existing-content-or-add-terms-of-use-in-the-space-below=Seleccione contenido existente o añada las condiciones de uso en el espacio siguiente.
 select-existing-content-or-add-the-url-below=Seleccione contenido existente o añada la URL a continuación.
 select-experience=Seleccionar experiencia
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Permite seleccionar una o más opciones de una lista.
 select-field-type-label=Seleccionar de lista
 select-filter=Seleccionar filtro
