--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=الگوهای دریافت
 export-the-selected-data-to-the-given-lar-file-name=داده‌های انتخاب شده در فایل با نام مشخص شده ذخیره کن.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=دریافت اطلاعات کاربر
 expose-global=نمایش کلی
 expression=عبارت
@@ -7844,6 +7845,7 @@ select-entry=ورودی را انتخاب کنید
 select-existing-content-or-add-terms-of-use-in-the-space-below=محتوای موجود را انتخاب کنید یا شرایط استفاده را در فضای زیر اضافه کنید.
 select-existing-content-or-add-the-url-below=محتوای موجود را انتخاب کنید یا آدرس اینترنتی زیر را اضافه کنید.
 select-experience=تجربه را انتخاب کنید
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=گزینه ها را از یک لیست انتخاب کنید. (Automatic Translation)
 select-field-type-label=انتخاب از لیست
 select-filter=فیلتر را انتخاب کنید
