--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -3493,6 +3493,7 @@ export-script=Vie skripti
 export-templates=Vie ulos esitysmallit
 export-the-selected-data-to-the-given-lar-file-name=Vie ulos valittu data annettuu LAR-tiedostoon.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Vie valitut tiedot etäportaalin kohteeseen {0} tai toisen saman portaalin kohteeseen {0}.
+export-translation=Export Translation (Automatic Copy)
 export-users=Vie ulos käyttäjät
 expose-global=Paljasta Globaali
 expression=Lauseke
@@ -7844,6 +7845,7 @@ select-entry=Valitse Merkintä
 select-existing-content-or-add-terms-of-use-in-the-space-below=Valitse olemassa oleva sisältö tai lisää Käyttöehdot alla olevaan tilaan.
 select-existing-content-or-add-the-url-below=Valitse olemassa oleva sisältö tai lisää URL-osoite alle.
 select-experience=Valitse Kokemus
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Valitse tai useampia vaihtoehtoja luettelosta.
 select-field-type-label=Valitse Luettelosta
 select-filter=Valitse Suodatin
