--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=लेआउट टेम्पलेट्स
 export-the-selected-data-to-the-given-lar-file-name=दी गई हुई LAR फाइल के लिए चुना हुआ डेटा एक्सपोर्ट कीजिए.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=सब घटना को एक्सपोर्ट करना
 expose-global=बेनकाब ग्लोबल (Automatic Translation)
 expression=अभिव्यक्ति (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=प्रविष्टि का चयन करें (Automati
 select-existing-content-or-add-terms-of-use-in-the-space-below=मौजूदा सामग्री का चयन करें या नीचे दिए गए स्थान में उपयोग की शर्तें जोड़ें। (Automatic Translation)
 select-existing-content-or-add-the-url-below=मौजूदा सामग्री का चयन करें या नीचे दिए गए यूआरएल को जोड़ें। (Automatic Translation)
 select-experience=अनुभव का चयन करें (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=किसी सूची से विकल्प चुनें. (Automatic Translation)
 select-field-type-label=सूची से चुनें (Automatic Translation)
 select-filter=फ़िल्टर चुनें (Automatic Translation)
