--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -3493,6 +3493,7 @@ export-script=Parancsfájl exportálása
 export-templates=Sablonok exportálása
 export-the-selected-data-to-the-given-lar-file-name=A kijelölt adatok kiexportálása a megadott LAR fájlba.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=A kijelölt adatok egy távoli portál {0}ére vagy ugyanazon portál más {0}ére történő exportálása.
+export-translation=Export Translation (Automatic Copy)
 export-users=Felhasználók exportálása
 expose-global=Globális közzététel
 expression=Kifejezés
@@ -7844,6 +7845,7 @@ select-entry=Bejegyzés kiválasztása
 select-existing-content-or-add-terms-of-use-in-the-space-below=Jelöljön ki egy meglévő tartalmat, vagy adja meg a Használati feltételeket az alábbi helyen.
 select-existing-content-or-add-the-url-below=Jelöljön ki egy meglévő tartalmat, vagy adja meg az URL-címet alább.
 select-experience=Élmény kiválasztása
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Válasszon egy vagy több lehetőséget egy listából.
 select-field-type-label=Válasszon a listából
 select-filter=Válasszon szűrőt
