--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Template Layout
 export-the-selected-data-to-the-given-lar-file-name=Ekspor data yang dipilih ke nama file LAR yang diberikan.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Export User (Ekspor Pengguna)
 expose-global=Mengekspos Global (Automatic Translation)
 expression=Ekspresi (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Pilih Entri (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Pilih konten yang sudah ada atau tambahkan ketentuan penggunaan dalam ruang di bawah ini. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Pilih konten yang sudah ada atau tambahkan URL di bawah ini. (Automatic Translation)
 select-experience=Pilih Pengalaman (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Pilih opsi dari daftar. (Automatic Translation)
 select-field-type-label=Pilih dari Daftar (Automatic Translation)
 select-filter=Pilih Filter (Automatic Translation)
