--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=יצא תבניות
 export-the-selected-data-to-the-given-lar-file-name=יצא את המידע הנבחר לשם קובץ LAR הנתון.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=ייצא משתמשים
 expose-global=חשוף גלובלית
 expression=ביטוי
@@ -7844,6 +7845,7 @@ select-entry=בחר רשומה
 select-existing-content-or-add-terms-of-use-in-the-space-below=בחר תוכן קיים או הוסף תנאי השימוש בשטח שלהלן.
 select-existing-content-or-add-the-url-below=בחר תוכן קיים או הוסף את כתובת ה-URL שלהלן.
 select-experience=בחר חוויה (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=בחר אפשרות אחת או יותר מרשימה.
 select-field-type-label=בחר מרשימה
 select-filter=בחר מסנן
