--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -3493,6 +3493,7 @@ export-script=スクリプトをエクスポート
 export-templates=テンプレートのエクスポート
 export-the-selected-data-to-the-given-lar-file-name=選択したデータをLARファイルとしてエクスポートする。
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=選択されたデータをリモートポータルの{0}や、同じポータルの別{0}へエクスポートします。
+export-translation=Export Translation (Automatic Copy)
 export-users=ユーザーのエクスポート
 expose-global=グローバルに公開
 expression=式
@@ -7844,6 +7845,7 @@ select-entry=エントリを選択してください
 select-existing-content-or-add-terms-of-use-in-the-space-below=既存のコンテンツを選択するか、利用規約を以下のスペースに追加してください
 select-existing-content-or-add-the-url-below=既存のコンテンツを選択するか、URLを以下に追加してください。
 select-experience=エクスペリエンスを選択
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=複数の選択肢からプルダウンで選択します
 select-field-type-label=プルダウン
 select-filter=フィルターを選択
