--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=배치 템플렛
 export-the-selected-data-to-the-given-lar-file-name=준LAR파일 이름에 선정한 자료를 수출하십시요.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=모든 사건을 수출하십시요
 expose-global=글로벌 노출 (Automatic Translation)
 expression=식 (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=항목 선택 (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=아래 공간에서 기존 콘텐츠를 선택하거나 사용 약관을 추가합니다. (Automatic Translation)
 select-existing-content-or-add-the-url-below=기존 콘텐츠를 선택하거나 아래 URL을 추가합니다. (Automatic Translation)
 select-experience=경험 선택 (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=목록에서 옵션 선택
 select-field-type-label=목록에서 선택 (Automatic Translation)
 select-filter=필터 선택 (Automatic Translation)
