--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Eksportuoti šablonus (Automatic Translation)
 export-the-selected-data-to-the-given-lar-file-name=Eksportuoti pasirinktus duomenis į nurodytą LAR failo vardą. (Automatic Translation)
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Eksportuoti vartotojus (Automatic Translation)
 expose-global=Atskleisti visuotinį (Automatic Translation)
 expression=išraiška (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Pasirinkti įrašą (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Pasirinkite esamą turinį arba pridėkite naudojimo sąlygas žemiau esančioje vietoje. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Pasirinkite esamą turinį arba pridėkite URL toliau. (Automatic Translation)
 select-experience=Pasirinkite patirtį (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Pasirinkite parinktis iš sąrašo. (Automatic Translation)
 select-field-type-label=Pasirinkti iš sąrašo (Automatic Translation)
 select-filter=Pasirinkti filtrą (Automatic Translation)
