--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Eksport Template (Automatic Translation)
 export-the-selected-data-to-the-given-lar-file-name=Eksport data terpilih ke nama fail LAR yang diberikan. (Automatic Translation)
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Eksport Pengguna (Automatic Translation)
 expose-global=Dedahkan Global (Automatic Translation)
 expression=Ungkapan (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Pilih Masukan (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Pilih kandungan sedia ada atau tambah terma penggunaan dalam ruang di bawah. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Pilih kandungan sedia ada atau tambah URL di bawah. (Automatic Translation)
 select-experience=Pilih Pengalaman (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Pilih opsyen daripada senarai. (Automatic Translation)
 select-field-type-label=Pilih daripada Senarai (Automatic Translation)
 select-filter=Pilih Penapis (Automatic Translation)
