--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Utformingsmaler
 export-the-selected-data-to-the-given-lar-file-name=Eksporter valgte data til LAR filen med oppgitt navn.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Eksporter brukere
 expose-global=Eksponer globalt
 expression=Uttrykk
@@ -7844,6 +7845,7 @@ select-entry=Velg innlegg
 select-existing-content-or-add-terms-of-use-in-the-space-below=Velg eksisterende innhold, eller legg til vilkår for bruk i området nedenfor. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Velg eksisterende innhold, eller legg til URL-adressen nedenfor. (Automatic Translation)
 select-experience=Velg opplevelse
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Velg fra en liste.
 select-field-type-label=Velg fra en liste
 select-filter=Velg filter (Automatic Translation)
