--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3493,6 +3493,7 @@ export-script=Script exporteren
 export-templates=Lay-outsjablonen
 export-the-selected-data-to-the-given-lar-file-name=De geselecteerde data exporteren naar het opgegeven LAR-bestand.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=De geselecteerde data exporteren naar een {0} van een extern portaal of naar een andere {0} in hetzelfde portaal.
+export-translation=Export Translation (Automatic Copy)
 export-users=Gebruikers exporteren
 expose-global=Globaal uiteenzetten
 expression=Expressie
@@ -7844,6 +7845,7 @@ select-entry=Invoer selecteren
 select-existing-content-or-add-terms-of-use-in-the-space-below=Selecteer bestaande inhoud of voeg gebruiksvoorwaarden toe in de ruimte hieronder.
 select-existing-content-or-add-the-url-below=Selecteer bestaande inhoud of voeg de URL toe hieronder.
 select-experience=Ervaring selecteren
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Kies een of meer opties uit een lijst.
 select-field-type-label=Kies uit lijst
 select-filter=Filter selecteren
