--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -3493,6 +3493,7 @@ export-script=Script de exportação
 export-templates=Modelos de layout
 export-the-selected-data-to-the-given-lar-file-name=Exportar os dados selecionados para um arquivo LAR fornecido.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Exportar os dados selecionados para o {0} de um portal remoto ou para outro {0} do mesmo portal.
+export-translation=Export Translation (Automatic Copy)
 export-users=Exportar Usuários
 expose-global=Expor Global
 expression=Expressão
@@ -7844,6 +7845,7 @@ select-entry=Selecionar Entrada
 select-existing-content-or-add-terms-of-use-in-the-space-below=Selecione o conteúdo existente ou adicione os Termos de Uso no espaço abaixo.
 select-existing-content-or-add-the-url-below=Selecione o conteúdo existente ou adicione a URL abaixo.
 select-experience=Selecionar experiência
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Escolher um ou mais opções de uma lista.
 select-field-type-label=Selecionar da lista
 select-filter=Selecionar Filtro
