--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Sabloane Afisare
 export-the-selected-data-to-the-given-lar-file-name=Exportă datele selectate la fișierul LAR selectat.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Exportă Utilizatorul
 expose-global=Expunere globală (Automatic Translation)
 expression=expresie (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Selectare intrare (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Selectați conținutul existent sau adăugați termeni de utilizare în spațiul de mai jos. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Selectați conținutul existent sau adăugați URL-ul de mai jos. (Automatic Translation)
 select-experience=Selectați Experiență (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Selectați opțiunile dintr-o listă. (Automatic Translation)
 select-field-type-label=Selectare din listă (Automatic Translation)
 select-filter=Selectare filtru (Automatic Translation)
