--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Шаблоны макеты
 export-the-selected-data-to-the-given-lar-file-name=Экспорт выделенных данных в указанное имя LAR файла.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Экспорт пользователей
 expose-global=Разоблачить Глобальный (Automatic Translation)
 expression=выражение (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Выберите вход (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Выберите существующее содержимое или добавьте условия использования в приведенной ниже пространстве. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Выберите существующее содержимое или добавьте URL ниже. (Automatic Translation)
 select-experience=Выберите Опыт (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Выберите параметры из списка. (Automatic Translation)
 select-field-type-label=Выберите из списка (Automatic Translation)
 select-filter=Выберите фильтр (Automatic Translation)
