--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Predloge izgleda
 export-the-selected-data-to-the-given-lar-file-name=Izvozi izbrane podatke v izbrano LAR datoteko.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Izvozi vse dogodke
 expose-global=Razkrij globalno (Automatic Translation)
 expression=izraz (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Izberi vnos (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Izberite obstoječo vsebino ali dodajte pogoje uporabe v spodnjem prostoru. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Izberite obstoječo vsebino ali dodajte URL spodaj. (Automatic Translation)
 select-experience=Izberi izkušnjo (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Izberite možnosti s seznama. (Automatic Translation)
 select-field-type-label=Izberi s seznama (Automatic Translation)
 select-filter=Izberite filter (Automatic Translation)
