--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -3493,6 +3493,7 @@ export-script=Exportera skript
 export-templates=Formatmallar
 export-the-selected-data-to-the-given-lar-file-name=Exportera vald data till namngiven LAR-fil.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Exportera valda data till {0} för en fjärrportal eller till en annan {0} i samma portal.
+export-translation=Export Translation (Automatic Copy)
 export-users=Exportera användare
 expose-global=Visa globalt
 expression=Uttryck
@@ -7844,6 +7845,7 @@ select-entry=Välj post
 select-existing-content-or-add-terms-of-use-in-the-space-below=Välj befintligt innehåll eller lägg till användarvillkor i utrymmet nedan.
 select-existing-content-or-add-the-url-below=Välj befintligt innehåll eller lägg till URL nedan.
 select-experience=Välj upplevelse
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Välj ett eller fler alternativ från en lista.
 select-field-type-label=Välj från lista
 select-filter=Välj filter
