--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=ส่งออกแม่แบบ (Automatic Translation)
 export-the-selected-data-to-the-given-lar-file-name=ส่งออกข้อมูลที่เลือกไปยังชื่อแฟ้ม LAR ที่กําหนด (Automatic Translation)
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=ส่งออกผู้ใช้ (Automatic Translation)
 expose-global=เปิดเผยทั่วโลก
 expression=การแสดงออก
@@ -7844,6 +7845,7 @@ select-entry=เลือกรายการ
 select-existing-content-or-add-terms-of-use-in-the-space-below=เลือกเนื้อหาที่มีอยู่หรือเพิ่มข้อกําหนดการใช้งานในช่องว่างด้านล่าง (Automatic Translation)
 select-existing-content-or-add-the-url-below=เลือกเนื้อหาที่มีอยู่หรือเพิ่ม URL ด้านล่าง (Automatic Translation)
 select-experience=เลือกประสบการณ์
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=เลือกตัวเลือกจากรายการ (Automatic Translation)
 select-field-type-label=เลือกจากรายการ
 select-filter=เลือกตัวกรอง (Automatic Translation)
