--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Yerleşim Şablonları
 export-the-selected-data-to-the-given-lar-file-name=Verilen LAR dosya adına seçilmiş veriyi gönder.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Tüm Olayları Dışa Aktar
 expose-global=Geneli Göster (Automatic Translation)
 expression=ifade (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Giriş Seç (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Varolan içeriği seçin veya aşağıdaki alana kullanım koşulları ekleyin. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Varolan içeriği seçin veya URL'yi aşağıya ekleyin. (Automatic Translation)
 select-experience=Deneyim Seç (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Listeden seçenekleri belirleyin. (Automatic Translation)
 select-field-type-label=Listeden Seç (Automatic Translation)
 select-filter=Filtre Seç (Automatic Translation)
