--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Шаблони макетів
 export-the-selected-data-to-the-given-lar-file-name=Експорт виділених даних у зазначене ім'я LAR файлу.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Експортування всій подій
 expose-global=Викриття глобального (Automatic Translation)
 expression=вираз (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Вибір елемента (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Виберіть наявний вміст або додайте умови використання в наведеному нижче просторі. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Виберіть наявний вміст або додайте URL-адресу нижче. (Automatic Translation)
 select-experience=Виберіть досвід (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Виберіть параметри зі списку. (Automatic Translation)
 select-field-type-label=Вибрати зі списку (Automatic Translation)
 select-filter=Вибір фільтра (Automatic Translation)
