--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Biểu mẫu của bố cục
 export-the-selected-data-to-the-given-lar-file-name=Xuất dữ liệu đã chọn ra tập tin định dạng LAR với tên.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Kết xuất dữ liệu người dùng
 expose-global=Expose Toàn cầu (Automatic Translation)
 expression=biểu thức (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Chọn Mục nhập (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Chọn nội dung hiện có hoặc thêm điều khoản sử dụng trong không gian bên dưới. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Chọn nội dung hiện có hoặc thêm URL bên dưới. (Automatic Translation)
 select-experience=Chọn Trải nghiệm (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Chọn tùy chọn từ danh sách. (Automatic Translation)
 select-field-type-label=Chọn từ Danh sách (Automatic Translation)
 select-filter=Chọn Bộ lọc (Automatic Translation)
