--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -3493,6 +3493,7 @@ export-script=导出脚本
 export-templates=导出模板
 export-the-selected-data-to-the-given-lar-file-name=将选定数据导出到指定的LAR文件名中。
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=将选定数据导出到远程门户的{0}或相同门户中的其他{0}。
+export-translation=Export Translation (Automatic Copy)
 export-users=导出用户
 expose-global=全球性公开
 expression=表达式
@@ -7844,6 +7845,7 @@ select-entry=选择条目
 select-existing-content-or-add-terms-of-use-in-the-space-below=选择现有内容或在下面空白处添加使用条款。
 select-existing-content-or-add-the-url-below=选择现有内容或在下面添加 URL。
 select-experience=选择体验
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=从列表中选择一个或多个选项。
 select-field-type-label=从列表中选择
 select-filter=选择筛选器
