--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -3493,6 +3493,7 @@ export-script=匯出腳本
 export-templates=匯出版型
 export-the-selected-data-to-the-given-lar-file-name=匯出被選擇資料到指定的LAR檔案名稱。
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=將選定資料匯出到遠端 Portal 的 {0} 或相同 Portal 中的其他 {0}。
+export-translation=Export Translation (Automatic Copy)
 export-users=匯出使用者
 expose-global=Expose Global
 expression=表達式
@@ -7844,6 +7845,7 @@ select-entry=選擇條目
 select-existing-content-or-add-terms-of-use-in-the-space-below=選擇現有內容或在下面空白處添加使用條款。
 select-existing-content-or-add-the-url-below=選擇現有內容或在下面添加 URL。
 select-experience=選擇個人化體驗
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=從列表選擇選項。
 select-field-type-label=從列表選擇
 select-filter=選擇篩選器
