--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -3493,6 +3493,7 @@ export-script=Exporta l'script
 export-templates=Plantilles de presentació
 export-the-selected-data-to-the-given-lar-file-name=Exporta les dades seleccionades al fitxer LAR corresponent.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Exporta les dades seleccionades al {0} d'un portal remot o a un altre {0} del mateix portal.
+export-translation=Export Translation (Automatic Copy)
 export-users=Exporta Usuaris
 expose-global=Exposa en global
 expression=Expressió
@@ -7844,6 +7845,7 @@ select-entry=Seleccioneu una entrada
 select-existing-content-or-add-terms-of-use-in-the-space-below=Seleccioneu un contingut existent o afegiu les condicions d'ús a l'espai de sota.
 select-existing-content-or-add-the-url-below=Seleccioneu un contingut existent o afegiu l'URL a sota.
 select-experience=Seleccioneu l'experiència
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Tria una o més opcions d'una llista.
 select-field-type-label=Selecciona de la llista
 select-filter=Seleccioneu filtre
