--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Vormingu mallsid
 export-the-selected-data-to-the-given-lar-file-name=Ekspordi valitud andmed antud LAR faili nimesse.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Ekspordi kõik sündmused
 expose-global=Paljasta globaalne (Automatic Translation)
 expression=avaldis (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Vali kirje (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Valige olemasolev sisu või lisage kasutustingimused allolevasse kohta. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Valige olemasolev sisu või lisage allolev URL. (Automatic Translation)
 select-experience=Valige Kogemus (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Valige loendist suvandid. (Automatic Translation)
 select-field-type-label=Vali loendist (Automatic Translation)
 select-filter=Vali filter (Automatic Translation)
