--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -3493,6 +3493,7 @@ export-script=Exporter un script
 export-templates=Modèles de disposition
 export-the-selected-data-to-the-given-lar-file-name=Exporter les données choisies dans un fichier LAR nommé comme suit
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Exportez les données sélectionnées vers le {0} d'un portail distant ou vers un autre {0} du même portail.
+export-translation=Export Translation (Automatic Copy)
 export-users=Exporter les utilisateurs
 expose-global=Exposer en global
 expression=Expression
@@ -7844,6 +7845,7 @@ select-entry=Sélectionner l'entrée
 select-existing-content-or-add-terms-of-use-in-the-space-below=Sélectionne du contenu existant ou ajoutez les Conditions d'utilisation dans l'espace ci-dessous.
 select-existing-content-or-add-the-url-below=Sélectionnez du contenu existant ou ajoutez l'URL ci-dessous.
 select-experience=Sélectionner l'expérience
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Choisissez une ou plusieurs options de la liste.
 select-field-type-label=Sélectionnez dans la liste
 select-filter=Sélectionner le filtre
