--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Modelli di Esportazione
 export-the-selected-data-to-the-given-lar-file-name=Esporta i dati selezionati nel file LAR assegnato.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Esporta Utenti
 expose-global=Esporre globalmente (Automatic Translation)
 expression=espressione (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Seleziona elemento
 select-existing-content-or-add-terms-of-use-in-the-space-below=Selezionare il contenuto esistente o aggiungere le condizioni per l'uso nello spazio seguente. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Selezionare il contenuto esistente o aggiungere l'URL riportato di seguito. (Automatic Translation)
 select-experience=Seleziona esperienza (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Selezionare le opzioni da un elenco. (Automatic Translation)
 select-field-type-label=Seleziona da Elenco (Automatic Translation)
 select-filter=Seleziona filtro (Automatic Translation)
