--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Szablony układów
 export-the-selected-data-to-the-given-lar-file-name=Eksportuj zaznaczone dane do podanej nazwy pliku LAR.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Eksport użytkowników
 expose-global=Wystawiaj globalnie (Automatic Translation)
 expression=Wyrażenie (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Wybierz pozycję (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Wybierz istniejącą zawartość lub dodaj warunki użytkowania w poniższym miejscu. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Wybierz istniejącą zawartość lub dodaj poniższy adres URL. (Automatic Translation)
 select-experience=Wybierz środowisko (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Wybierz opcje z listy. (Automatic Translation)
 select-field-type-label=Wybierz z listy (Automatic Translation)
 select-filter=Wybierz filtr (Automatic Translation)
