--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Exportar Templates
 export-the-selected-data-to-the-given-lar-file-name=Exportar os dados selecionados para um ficheiro LAR, com o nome fornecido.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Exportar Utilizadores
 expose-global=Expor global (Automatic Translation)
 expression=expressão (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Selecione Entrada (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Selecione o conteúdo existente ou adicione termos de uso no espaço abaixo. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Selecione o conteúdo existente ou adicione a URL abaixo. (Automatic Translation)
 select-experience=Selecione experiência (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Selecione opções em uma lista. (Automatic Translation)
 select-field-type-label=Selecione a partir de Lista (Automatic Translation)
 select-filter=Selecione Filtro (Automatic Translation)
