--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=Šablóny rozmiestnenia
 export-the-selected-data-to-the-given-lar-file-name=Exportujte vybrané dáta daného LAR súboru.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=Export používateľov
 expose-global=Vystaviť globálne (Automatic Translation)
 expression=výraz (Automatic Translation)
@@ -7844,6 +7845,7 @@ select-entry=Vybrať položku (Automatic Translation)
 select-existing-content-or-add-terms-of-use-in-the-space-below=Vyberte existujúci obsah alebo pridajte podmienky používania do nižšie uvedeného priestoru. (Automatic Translation)
 select-existing-content-or-add-the-url-below=Vyberte existujúci obsah alebo pridajte adresu URL nižšie. (Automatic Translation)
 select-experience=Vyberte položku Experience (Skúsenosti) (Automatic Translation)
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=Vyberte možnosti zo zoznamu. (Automatic Translation)
 select-field-type-label=Vybrať zo zoznamu (Automatic Translation)
 select-filter=Vybrať filter (Automatic Translation)
