--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script (Automatic Copy)
 export-templates=டெம்ப்ளேட்டுகளை ஏற்றுமதி செய்க
 export-the-selected-data-to-the-given-lar-file-name=தேர்ந்தெடுக்கப்பட்ட தரவை கொடுக்கப்பட்ட LAR ​​ஃபைலின் பெயரில் ஏற்றுமதி செய்யுங்கள்.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
+export-translation=Export Translation (Automatic Copy)
 export-users=பயனர்களை எக்ஸ்போர்ட் செய்யவும்
 expose-global=Expose Global (Automatic Copy)
 expression=Expression (Automatic Copy)
@@ -7844,6 +7845,7 @@ select-entry=உள்ளீட்டை தேர்ந்தெடு
 select-existing-content-or-add-terms-of-use-in-the-space-below=Select existing content or add terms of use in the space below. (Automatic Copy)
 select-existing-content-or-add-the-url-below=Select existing content or add the URL below. (Automatic Copy)
 select-experience=அனுபவத்தைத் தேர்ந்தெடுக்கவும்
+select-experiences=Select Experiences (Automatic Copy)
 select-field-type-description=பட்டியலிலிருந்து ஒன்று அல்லது அதற்கு மேற்பட்ட விருப்பங்களைத் தேர்வுசெய்யவும்.
 select-field-type-label=பட்டியலில் இருந்து தேர்ந்தெடுக்கவும்
 select-filter=Select Filter (Automatic Copy)
